--- a/src/App.scss
+++ b/src/App.scss
@@ -320,6 +320,15 @@ a:active {
   background: $accClr;
   grid-column: 2/4;
   grid-row: 1/2;
+  position: relative;
+  img {
+    left: 50%;
+    opacity: 50%;
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    user-select: none;
+  }
 }
 
 .inactive {
@@ -395,6 +404,15 @@ a:active {
   background: $accClr;
   grid-column: 1/3;
   grid-row: 2/2;
+  position: relative;
+  img {
+    left: 50%;
+    opacity: 50%;
+    position: absolute;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    user-select: none;
+  }
 }
 
 .projects {
