--- a/src/App.scss
+++ b/src/App.scss
@@ -31,7 +31,7 @@ $prmRds: 20px;
 
 html,
 body {
-  background: $pnlClr;
+  background: #b3a398;
 }
 
 body {
@@ -85,10 +85,10 @@ a:active {
 }
 
 .navigation-container {
-  background: $pnlClr;
   display: flex;
   justify-content: center;
   position: fixed;
+  transition: 0.5s;
   width: 100%;
   z-index: 2;
   .navigation {
@@ -109,6 +109,7 @@ a:active {
         cursor: pointer;
         user-select: none;
         width: 36px;
+        transition: 0.5s;
       }
       img:hover {
         filter: invert(93%) sepia(15%) saturate(627%) hue-rotate(316deg)
@@ -117,6 +118,7 @@ a:active {
       div {
         a {
           font-size: 18px;
+          transition: 0.5s;
         }
         a:hover {
           color: $bgClr;
@@ -134,7 +136,7 @@ a:active {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  min-height: 100dvh;
+  min-height: calc(100dvh - 80px);
   padding: 0 40px;
   position: relative;
   text-align: center;
@@ -150,10 +152,14 @@ a:active {
     transform: translateY(62px);
   }
   img {
+    animation-delay: 3s;
+    animation-duration: 7s;
+    animation-iteration-count: infinite;
+    animation: bounce;
     bottom: 0;
     pointer-events: none;
     position: fixed;
-    transform: translatey(-100px);
+    transform: translateY(-100px);
     user-select: none;
     width: 36px;
   }
@@ -175,6 +181,21 @@ a:active {
     height: 100px;
     position: absolute;
     width: 100%;
+  }
+
+  @keyframes bounce {
+    0% {
+      transform: translateY(-100px);
+    }
+    10% {
+      transform: translateY(-120px);
+    }
+    15% {
+      transform: translateY(-100px);
+    }
+    100% {
+      transform: translateY(-100px);
+    }
   }
 }
 
@@ -205,6 +226,7 @@ a:active {
   padding: 40px;
   position: relative;
   text-align: center;
+  transition: 0.45s;
   h3 {
     font-size: 20px;
     position: absolute;
@@ -243,6 +265,7 @@ a:active {
   grid-column: 2/4;
   grid-row: 1/2;
   position: relative;
+  transition: 0.45s;
   img {
     left: 50%;
     opacity: 50%;
@@ -251,10 +274,6 @@ a:active {
     transform: translate(-50%, -50%);
     user-select: none;
   }
-}
-
-.inactive {
-  opacity: 0.6;
 }
 
 .operation {
@@ -345,6 +364,7 @@ a:active {
     padding: 40px;
     position: absolute;
     transition: 0.5s;
+    z-index: 2;
   }
 }
 
@@ -367,6 +387,7 @@ a:active {
   grid-column: 1/3;
   grid-row: 2/2;
   position: relative;
+  transition: 0.45s;
   img {
     left: 50%;
     opacity: 50%;
@@ -379,13 +400,17 @@ a:active {
 
 .projects-header {
   align-items: center;
-  background: $sctClr;
+  background: #1e1e1e;
   display: flex;
   flex-direction: column;
   justify-content: center;
   padding: 180px 40px 100px 40px;
   text-align: center;
+  h1 {
+    color: #f2f2f2;
+  }
   p {
+    color: #f2f2f2;
     font-size: 19px;
     margin: 16px 0 0 0;
     max-width: 1280px;
@@ -393,14 +418,13 @@ a:active {
 }
 
 .projects-description {
-  background: $accClr;
-  background: #b3a398;
+  background: #1e1e1e;
 
   display: flex;
   justify-content: center;
   padding: 0 40px 0 40px;
   h2 {
-    color: $bgClr;
+    color: #787878;
     // color: #eebfa1;
     // color: #867070;
     max-width: 1280px;
@@ -409,7 +433,7 @@ a:active {
 }
 
 .projects {
-  background: $bgClr;
+  background: #1e1e1e;
   display: flex;
   justify-content: center;
   padding: 60px 40px 90px 40px;
@@ -500,7 +524,7 @@ a:active {
 }
 
 .contact {
-  background: $sctClr;
+  background: #867070;
   display: flex;
   gap: 30px;
   justify-content: center;
@@ -513,9 +537,13 @@ a:active {
     display: flex;
     flex-direction: column;
     justify-content: center;
+    h1 {
+      color: $sctClr;
+    }
     p {
       margin: 10px 0 0 0;
       white-space: nowrap;
+      color: $sctClr;
     }
   }
 }
@@ -582,6 +610,16 @@ a:active {
       position: relative;
       width: 56px;
     }
+  }
+}
+
+@media (min-width: 1100px) and (max-width: 1268px) {
+  .service-container {
+    grid-template-columns: repeat(3, 1fr);
+  }
+  .service-image {
+    grid-column: 1/3;
+    grid-row: 1/2;
   }
 }
 
